--- a/gateway-library-service/src/main/resources/application.properties
+++ b/gateway-library-service/src/main/resources/application.properties
@@ -4,7 +4,9 @@
 
 # Set here configurations for the database connection
 #DATABASE_URL= #moved to env var
-spring.datasource.url=jdbc:postgresql://postgresql-dev.default.svc.cluster.local:5432/libraries
+#spring.datasource.url=jdbc:postgresql://postgresql-dev.default.svc.cluster.local:5432/libraries
+#spring.datasource.url=jdbc:postgresql://postgres:5432/libraries
+spring.datasource.url=jdbc:postgresql://localhost:5432/libraries
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 #spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?sslmode=require&amp;sslfactory=org.postgresql.ssl.NonValidatingFactory
@@ -16,12 +18,12 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 server.port=8080
-#services.library-url=http://${LIBRARY_HOST:library.finarsi-rsoi.site}:8060/
-services.library-url=https://library.finarsi-rsoi.site
-#services.reservation-url=http://${RENTAL_HOST:rental.finarsi-rsoi.site}:8070/
-services.reservation-url=https://rental.finarsi-rsoi.site
-#services.rating-url=http://${RATING_HOST:rating.finarsi-rsoi.site}:8050/
-services.rating-url=https://rating.finarsi-rsoi.site
+services.library-url=http://${LIBRARY_HOST:library.finarsi-rsoi.site}:8060/
+#services.library-url=https://library.finarsi-rsoi.site
+services.reservation-url=http://${RENTAL_HOST:rental.finarsi-rsoi.site}:8070/
+#services.reservation-url=https://rental.finarsi-rsoi.site
+services.rating-url=http://${RATING_HOST:rating.finarsi-rsoi.site}:8050/
+#services.rating-url=https://rating.finarsi-rsoi.site
 
 # ===============================
 # = JPA / HIBERNATE
@@ -44,3 +46,13 @@ spring.jpa.properties.hibernate.id.new_generator_mappings=false
 
 #server.servlet.encoding.charset=UTF-8
 #server.servlet.encoding.force-response=true
+
+
+spring.security.oauth2.client.registration.auth0.client-id=i4ubDJshyFiCMCLZK5cuZMWLL8LF8Aya
+spring.security.oauth2.client.registration.auth0.client-secret=KIAa_WvBsBwYa00XQlsX9A7ssiio4Fv3_y8B0_CSBPM5NEz7VU_1Qq0SES7Xtj7Z
+spring.security.oauth2.client.registration.auth0.scope=[openid, profile, email]
+spring.security.oauth2.client.provider.auth0.issuer-uri=https://dev-m2xuc817jnql8075.jp.auth0.com/
+
+auth0.audience=localhost:8080/api/v1
+auth0.domain=dev-m2xuc817jnql8075.jp.auth0.com
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://${auth0.domain}/
