--- a/library-service/src/main/resources/application.properties
+++ b/library-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:postgresql://postgresql-dev.default.svc.cluster.local:5432/libraries
+#spring.datasource.url=jdbc:postgresql://postgresql-dev.default.svc.cluster.local:5432/libraries
+spring.datasource.url=jdbc:postgresql://localhost:5432/libraries
+
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
