--- a/reservation-service/src/main/resources/application.properties
+++ b/reservation-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:postgresql://postgresql-dev.default.svc.cluster.local:5432/reservations
+#spring.datasource.url=jdbc:postgresql://postgresql-dev.default.svc.cluster.local:5432/reservations
+spring.datasource.url=jdbc:postgresql://localhost:5432/reservations
+
 spring.datasource.username=program
 spring.datasource.password=test
 spring.datasource.driver-class-name=org.postgresql.Driver
