--- a/rating-service/src/main/resources/application.properties
+++ b/rating-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.datasource.url=jdbc:postgresql://postgresql-dev.default.svc.cluster.local:5432/ratings
-spring.datasource.url=jdbc:postgresql://localhost:5432/ratings
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:5432/ratings
 
 spring.datasource.username=program
 spring.datasource.password=test
