--- a/gateway-library-service/src/main/resources/application.properties
+++ b/gateway-library-service/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 #DATABASE_URL= #moved to env var
 #spring.datasource.url=jdbc:postgresql://postgresql-dev.default.svc.cluster.local:5432/libraries
 #spring.datasource.url=jdbc:postgresql://postgres:5432/libraries
-spring.datasource.url=jdbc:postgresql://localhost:5432/libraries
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:5432/libraries
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 #spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?sslmode=require&amp;sslfactory=org.postgresql.ssl.NonValidatingFactory
