fixed postgres yaml's for okteto

--- a/k8s/postgres/values.yaml
+++ b/k8s/postgres/values.yaml
@@ -16,7 +16,7 @@ image:
 primary:
   persistence:
     enabled: false
-#    existingClaim: "postgresql-data-claim"
+    existingClaim: postgresql-data-claim
 
 #  extraVolumes:
 #    - name: postgres-seed
@@ -117,5 +117,6 @@ primary:
 
         \c ratings
         insert into rating (id, username, stars)
-        values (1, 'Test Max', 75)
+        values (1, 'Test Max', 75), (2, 'auth0|63b7ec61de8bf7f5a9944b40', 75);
+
 
