--- a/k8s/postgres/pv-claim.yaml
+++ b/k8s/postgres/pv-claim.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: PersistentVolumeClaim # Create PVC
 metadata:
   name: postgresql-data-claim # Sets name of PV
+  labels:
+    app: postgres
 spec:
   storageClassName: manual
   accessModes:
