--- a/k8s/ingress/lb-gateway.yaml
+++ b/k8s/ingress/lb-gateway.yaml
@@ -1,18 +1,21 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: gateway-ingress
+  name: gateway
   annotations:
-    kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/cluster-issuer: "letsencrypt"
+    dev.okteto.com/generate-host: "true"
+#    kubernetes.io/ingress.class: "nginx"
+#    cert-manager.io/cluster-issuer: "letsencrypt"
 spec:
-  tls:
-    - hosts:
-        - finarsi-rsoi.site
-      secretName: letsencrypt
+#  tls:
+#    - hosts:
+#        - gateway-rsoi-finisto.cloud.okteto.net
+#      secretName: letsencrypt
+  ingressClassName: nginx
   rules:
-    - host: finarsi-rsoi.site
-      http:
+#    - host: gateway-rsoi-finisto.cloud.okteto.net
+#      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
