--- a/gateway-library-service/src/main/resources/application.properties
+++ b/gateway-library-service/src/main/resources/application.properties
@@ -18,11 +18,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 server.port=8080
-services.library-url=http://${LIBRARY_HOST:library.finarsi-rsoi.site}:8060/
+services.library-url=https://${LIBRARY_HOST:library.finarsi-rsoi.site}/
 #services.library-url=https://library.finarsi-rsoi.site
-services.reservation-url=http://${RENTAL_HOST:rental.finarsi-rsoi.site}:8070/
+services.reservation-url=https://${RENTAL_HOST:rental.finarsi-rsoi.site}/
 #services.reservation-url=https://rental.finarsi-rsoi.site
-services.rating-url=http://${RATING_HOST:rating.finarsi-rsoi.site}:8050/
+services.rating-url=https://${RATING_HOST:rating.finarsi-rsoi.site}/
 #services.rating-url=https://rating.finarsi-rsoi.site
 
 # ===============================
