upgraded helm charts

--- a/k8s/libsys-chart/Chart.yaml
+++ b/k8s/libsys-chart/Chart.yaml
@@ -3,17 +3,17 @@ name: libsys-chart
 description: A Helm chart for Kubernetes library system
 
 type: application
-version: 0.5.0
+version: 0.8.0
 dependencies:
   - name: service-chart
-    version: 0.5.0
+    version: 0.8.0
     alias: gateway
-#  - name: service-chart
-#    version: 0.3.0
-#    alias: rating
-#  - name: service-chart
-#    version: 0.3.0
-#    alias: library
-#  - name: service-chart
-#    version: 0.3.0
-#    alias: rental
+  - name: service-chart
+    version: 0.8.0
+    alias: rating
+  - name: service-chart
+    version: 0.8.0
+    alias: library
+  - name: service-chart
+    version: 0.8.0
+    alias: rental
