--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -13,7 +13,42 @@ jobs:
 
       - uses: docker/setup-buildx-action@v2
 
-      # TODO build, publish to docker hub, deploy to k8s
+      - name: Set up JDK 19
+        uses: actions/setup-java@v3
+        with:
+          java-version: '19'
+          distribution: 'temurin'
+
+      - name: Maven build packages
+        run: mvn clean --batch-mode --update-snapshots verify -DskipTests
+
+      - name: Login to DockerHUB container registry
+        run: docker login --username ${{secrets.DOCKERHUB_USERNAME}} --password ${{secrets.DOCKERHUB_TOKEN}}
+
+      - name: Build docker images
+        run: |
+          docker build .\gateway-library-service\ --tag finisto/gateway-service:v1.7
+          docker build .\rating-service\ --tag finisto/rating-service:v1.7
+          docker build .\library-service\ --tag finisto/library-service:v1.7
+          docker build .\reservation-service\ --tag finisto/reservation-service:v1.7
+
+      - name: Push images to registry
+        run: |
+          docker push finisto/gateway-service:v1.7
+          docker push finisto/rating-service:v1.7
+          docker push finisto/library-service:v1.7
+          docker push finisto/reservation-service:v1.7
+
+      - name: Setup kubernetes
+        run: |
+          echo "${{secrets.OKTETO_KUBECONFIG}}" > okteto-kube.config
+          export KUBECONFIG="./okteto-kube.config;${KUBECONFIG};$HOME/.kube/config"
+
+      - name: Install helm chart for library system
+        run: |
+          helm install library-system .\k8s\libsys-chart\ --set postgresHost=$POSTGRES_HOST,libraryHost=$LIBRARY_HOST,rentalHost=$RENTAL_HOST,ratingHost=$RATING_HOST
+          sleep 60    
+      
 
       - name: Run API Tests
         uses: matt-ball/newman-action@master
