--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -21,9 +21,17 @@ jobs:
 
       - name: Setup kubernetes
         run: |
-          echo "${{secrets.OKTETO_KUBECONFIG}}" > okteto-kube.config
+          echo "${{secrets.OKTETO_KUBECONFIG}}" > ./okteto-kube.config
           export KUBECONFIG=./okteto-kube.config:${KUBECONFIG:-$HOME/.kube/config}
           echo "$KUBECONFIG"
+
+      - name: Install helm chart for library system
+        run: |
+          cat okteto-kube.config
+          echo "$KUBECONFIG"
+          helm install library-system ./k8s/libsys-chart/ --set postgresHost=$POSTGRES_HOST,libraryHost=$LIBRARY_HOST,rentalHost=$RENTAL_HOST,ratingHost=$RATING_HOST
+          sleep 60    
+      
 
       - name: Set up JDK 19
         uses: actions/setup-java@v3
@@ -53,10 +61,6 @@ jobs:
 
       
 
-      - name: Install helm chart for library system
-        run: |
-          helm install library-system ./k8s/libsys-chart/ --set postgresHost=$POSTGRES_HOST,libraryHost=$LIBRARY_HOST,rentalHost=$RENTAL_HOST,ratingHost=$RATING_HOST
-          sleep 60    
       
 
       - name: Run API Tests
