--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -27,7 +27,9 @@ jobs:
 
       - name: Install helm chart for library system
         run: |
+          echo "config file:"
           cat okteto-kube.config
+          echo "kubeconfig var:"
           echo "$KUBECONFIG"
           helm install library-system ./k8s/libsys-chart/ --set postgresHost=$POSTGRES_HOST,libraryHost=$LIBRARY_HOST,rentalHost=$RENTAL_HOST,ratingHost=$RATING_HOST
           sleep 60    
