--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -31,6 +31,10 @@ jobs:
           cat okteto-kube.config
           echo "kubeconfig var:"
           echo "${KUBECONFIG}"
+          export KUBECONFIG=./okteto-kube.config:${KUBECONFIG:-$HOME/.kube/config}
+          echo "kubeconfig var:"
+          echo "${KUBECONFIG}"
+          echo "$KUBECONFIG"
           helm install library-system ./k8s/libsys-chart/ --set postgresHost=$POSTGRES_HOST,libraryHost=$LIBRARY_HOST,rentalHost=$RENTAL_HOST,ratingHost=$RATING_HOST
           sleep 60    
       
