remove from pipeline all steps except postman

--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,7 +1,7 @@
 name: GitHub Classroom Workflow
 on:
   push:
-    branches: [ master ]
+    branches: [ postman-test ]
 
 env:
   POSTGRES_HOST: ${{secrets.POSTGRES_HOST}}
@@ -16,57 +16,6 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      - uses: docker/setup-buildx-action@v2
-
-      
-
-      - name: Set up JDK 19
-        uses: actions/setup-java@v3
-        with:
-          java-version: '19'
-          distribution: 'temurin'
-
-      - name: Maven build packages
-        run: mvn clean --batch-mode --update-snapshots verify -DskipTests
-
-      - name: Login to DockerHUB container registry
-        run: docker login --username ${{secrets.DOCKERHUB_USERNAME}} --password ${{secrets.DOCKERHUB_TOKEN}}
-
-      - name: Build docker images
-        run: |
-          docker build ./gateway-library-service/ --tag ${{secrets.DOCKERHUB_USERNAME}}/gateway-service:v1.7
-          docker build ./rating-service/ --tag ${{secrets.DOCKERHUB_USERNAME}}/rating-service:v1.7
-          docker build ./library-service/ --tag ${{secrets.DOCKERHUB_USERNAME}}/library-service:v1.7
-          docker build ./reservation-service/ --tag ${{secrets.DOCKERHUB_USERNAME}}/reservation-service:v1.7
-
-      - name: Push images to registry
-        run: |
-          docker push ${{secrets.DOCKERHUB_USERNAME}}/gateway-service:v1.7
-          docker push ${{secrets.DOCKERHUB_USERNAME}}/rating-service:v1.7
-          docker push ${{secrets.DOCKERHUB_USERNAME}}/library-service:v1.7
-          docker push ${{secrets.DOCKERHUB_USERNAME}}/reservation-service:v1.7
-
-
-      - name: Setup kubernetes
-        run: |
-          echo "${{secrets.OKTETO_KUBECONFIG}}" > ./okteto-kube.config
-          export KUBECONFIG=./okteto-kube.config:${KUBECONFIG:-$HOME/.kube/config}
-          echo "$KUBECONFIG"
-
-      - name: Install helm chart for library system
-        run: |
-          echo "config file:"
-          cat okteto-kube.config
-          echo "kubeconfig var:"
-          echo "${KUBECONFIG}"
-          export KUBECONFIG=./okteto-kube.config:${KUBECONFIG:-$HOME/.kube/config}
-          echo "kubeconfig var:"
-          echo "${KUBECONFIG}"
-          echo "$KUBECONFIG"
-          helm install library-system ./k8s/libsys-chart/ --set postgresHost=$POSTGRES_HOST,libraryHost=$LIBRARY_HOST,rentalHost=$RENTAL_HOST,ratingHost=$RATING_HOST
-          sleep 60    
-
       
 
       - name: Run API Tests
